cmake_minimum_required(VERSION 2.6)

project (helloworld CXX)

set(HELLOWORLD_HEADERS HelloWorld.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(HELLOWORLD_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(HELLOWORLD_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${HELLOWORLD_HEADERS})

CODEGEN_FILES(HELLOWORLD_CODEGEN_SOURCES ${HELLOWORLD_CODEGEN_DIR} ${HELLOWORLD_HEADERS})

add_custom_command(OUTPUT ${HELLOWORLD_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${HELLOWORLD_CODEGEN_DIR} -t service ${HELLOWORLD_HEADERS}
    DEPENDS ${HELLOWORLD_HEADERS_PATHS}
)

file(GLOB HELLOWORLD_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND HELLOWORLD_SOURCES ${HELLOWORLD_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(helloworld MODULE ${HELLOWORLD_SOURCES})

set_target_properties(helloworld PROPERTIES PREFIX "")
set_target_properties(helloworld PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(helloworld ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
