cmake_minimum_required(VERSION 2.6)

project (app CXX)

set(APP_HEADERS app.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(APP_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(APP_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${APP_HEADERS})

CODEGEN_FILES(APP_CODEGEN_SOURCES ${APP_CODEGEN_DIR} ${APP_HEADERS})

add_custom_command(OUTPUT ${APP_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${APP_CODEGEN_DIR} -t service ${APP_HEADERS}
    DEPENDS ${APP_HEADERS_PATHS}
)

file(GLOB APP_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND APP_SOURCES ${APP_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(app MODULE ${APP_SOURCES})

set_target_properties(app PROPERTIES PREFIX "")
set_target_properties(app PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(app ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
